# agent-as-a-service

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
app/: settings.py
app/api/routers/: agent.py
app/engine/: __init__.py  generate.py  index.py
app/engine/loaders/: __init__.py  db.py  file.py  web.py
config/: agent.yaml  loaders.yaml  settings.yaml
