[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Marcus Schiesser <mail@marcusschiesser.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "^0.109.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-dotenv = "^1.0.0"
llama-index-core = ">=0.10.33"
llama-index-postprocessor-colbert-rerank = "^0.1.1"
llama-index-llms-openai = "^0.1.16"
llama-index-llms-ollama = "^0.1.3"
llama-index-embeddings-openai = "^0.1.9"
llama-index-embeddings-ollama = "^0.1.2"
llama-index-agent-openai = "^0.2.3"

[tool.poetry.scripts]
generate = "app.engine.generate:generate_datasource"
