[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agent-as-a-service"
version = "0.1.0"
description = ""
authors = ["Logan Markewich <logan@runllama.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "^0.109.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-dotenv = "^1.0.0"
llama-index-core = ">=0.10.34"
llama-index-postprocessor-colbert-rerank = "^0.1.1"
llama-index-llms-openai = "^0.1.16"
llama-index-llms-ollama = "^0.1.3"
llama-index-embeddings-openai = "^0.1.9"
llama-index-embeddings-ollama = "^0.1.2"
llama-index-agent-openai = "^0.2.3"
llama-index-readers-file = "^0.1.20"
llama-index-readers-web = "^0.1.12"
llama-index-readers-database = "^0.1.4"

[tool.poetry.scripts]
generate = "app.engine.generate:generate_datasource"
